--- a/cell03/ex00/backgroound.css
+++ b/cell03/ex00/backgroound.css
@@ -1,1 +1,5 @@
-button {display: block;margin: 0 auto;padding: 5px 20px;}
+button {
+    display: block;
+    margin: 0 auto;
+    padding: 5px 20px;
+}
